# pipedream

./: .gitignore  2021-02-22-scoring  Main.hs  Pipemaze.hs  README  cabal.nix  flake.nix  ghci.hs  notes  pipemaze.cabal  shell.nix  solve.cabal  solve.hs  solve.prof
images/: animate
problems/: 2021-02-07.11:53.hs  2021-05-10-parallel.hs  2021-05-27-split.hs  2021-06-07-subset-check.hs  2021-06-09-force-choices.hs  2021-06-11-iterate-mtl.hs
samples/: 1  1-01  1-06  1-1  1-11  1-17  1-2  1-20  1-3  1-31  1-33  1-38  1-4  1-41  1-5  1-50  2  2-01  2-02  2-05  2-08  2-1  2-13  2-2  2-20  2-26  2-3  2-30  2-33  2-34  2-35  2-4  2-40  2-42  2-5  2021-07-14-1-with-space  3  3-01  3-02  3-04  (+103 more)
