name:           solve
version:        0.1.0.0
synopsis:       solves maze
description:    solves maze
author:         siers
maintainer:     wimuan@gmail.com
build-type:     Simple
cabal-version:  >= 1.10

executable solve
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fwarn-unused-imports
  hs-source-dirs: .
  build-depends:
      aeson
    , base
    , bytestring
    , clock
    , containers
    , derive-storable
    , extra
    , fgl
    , hip
    , lattices
    , lens
    , mtl
    , network
    , parallel-io
    , pomaps
    , primitive
    , template-haskell
    , text
    , transformers
    , unordered-containers
    , vector
    , websockets
  other-modules: Pipemaze
  default-language: Haskell2010
